dataset1235/2025-2/610742602/users/1997662715/executions/677928262_3921830315.log
== RUN (2025-08-28 15:13:56)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:10:32)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = gasolina + 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
31.08
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
425.11
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
144.34
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
251.3
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
682.68
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
123.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:13:07)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:14:30)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:10:58)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:12:46)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:13:00)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:12:46)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:13:59)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:12:46)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:14:34)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:11:15)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:11:14)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:12:58)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:13:03)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:10:06)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_sem_icms = gasolina + 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:14:01)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = total_com_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total_com_icms = total_com_icms * 1.34
                     ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:10:07)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_sem_icms = gasolina + 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:10:31)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_com_icms = gasolina + 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
31.08
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
425.11
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
144.34
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
251.3
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
682.68
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
123.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:09:24)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 15:10:19)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_sem_icms = gasolina + 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 15:10:05)
-- CODE: 
quantidade_litros = float(input())

gasolina = quantidade_litros * 2.86
total_sem_icms = gasolina + 50
total_sem_icms = gasolina + 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(total_com_icms, 2))
                ^^^^^^^^^^^^^^
NameError: name 'total_com_icms' is not defined. Did you mean: 'total_sem_icms'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
